updates to monthly and states sightings

--- a/Data/Sightings_State.ipynb
+++ b/Data/Sightings_State.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5f8776e2",
+   "id": "db871844",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7fa4ebe6",
+   "id": "14bad255",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "238c0552",
+   "id": "01312fac",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7f495069",
+   "id": "bfbe83f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7c3a24fd",
+   "id": "6e36ca53",
    "metadata": {},
    "outputs": [
     {
@@ -651,13 +651,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab8fafcb",
+   "execution_count": 13,
+   "id": "04304738",
    "metadata": {},
    "outputs": [],
    "source": [
     "# write to csv file\n",
-    "states.to_csv('state_sightings.csv')"
+    "states.to_csv('sightings_state.csv')"
    ]
   }
  ],
