--- a/Data/Sightings_Monthly.ipynb
+++ b/Data/Sightings_Monthly.ipynb
@@ -3,10 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "482f9ffe",
+   "id": "75bb3888",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Imports\n",
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -16,27 +17,29 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "30ae2538",
+   "id": "ca7f3072",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Read CSV\n",
     "ufo_data = pd.read_csv('../UFO_data.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d939cfd3",
+   "id": "1a2c6775",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Remove American Territories - US States \n",
     "ufo_data = ufo_data.drop(ufo_data[ufo_data['State'] == \"American Samoa\"].index)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6cc0dd46",
+   "id": "850d8384",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "529c87f5",
+   "id": "77c3cc99",
    "metadata": {},
    "outputs": [
     {
@@ -346,8 +349,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "29aad263",
+   "execution_count": 32,
+   "id": "8f632010",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +508,7 @@
        "5        129       129       127        127  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,8 +521,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "73b56d07",
+   "execution_count": 33,
+   "id": "19411c94",
    "metadata": {},
    "outputs": [
     {
@@ -529,178 +532,6 @@
       "Count of UFO Sightings by Month:\n"
      ]
     },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Shape</th>\n",
-       "      <th>Duration</th>\n",
-       "      <th>Summary</th>\n",
-       "      <th>Posted</th>\n",
-       "      <th>Images</th>\n",
-       "      <th>ReportNum</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-07-31</td>\n",
-       "      <td>399</td>\n",
-       "      <td>399</td>\n",
-       "      <td>399</td>\n",
-       "      <td>382</td>\n",
-       "      <td>379</td>\n",
-       "      <td>399</td>\n",
-       "      <td>399</td>\n",
-       "      <td>114</td>\n",
-       "      <td>399</td>\n",
-       "      <td>399</td>\n",
-       "      <td>397</td>\n",
-       "      <td>397</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-08-31</td>\n",
-       "      <td>419</td>\n",
-       "      <td>419</td>\n",
-       "      <td>419</td>\n",
-       "      <td>409</td>\n",
-       "      <td>408</td>\n",
-       "      <td>419</td>\n",
-       "      <td>419</td>\n",
-       "      <td>126</td>\n",
-       "      <td>419</td>\n",
-       "      <td>419</td>\n",
-       "      <td>418</td>\n",
-       "      <td>418</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-09-30</td>\n",
-       "      <td>455</td>\n",
-       "      <td>455</td>\n",
-       "      <td>455</td>\n",
-       "      <td>455</td>\n",
-       "      <td>444</td>\n",
-       "      <td>455</td>\n",
-       "      <td>455</td>\n",
-       "      <td>134</td>\n",
-       "      <td>455</td>\n",
-       "      <td>455</td>\n",
-       "      <td>455</td>\n",
-       "      <td>455</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-10-31</td>\n",
-       "      <td>393</td>\n",
-       "      <td>393</td>\n",
-       "      <td>393</td>\n",
-       "      <td>391</td>\n",
-       "      <td>375</td>\n",
-       "      <td>393</td>\n",
-       "      <td>393</td>\n",
-       "      <td>115</td>\n",
-       "      <td>393</td>\n",
-       "      <td>393</td>\n",
-       "      <td>392</td>\n",
-       "      <td>392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-11-30</td>\n",
-       "      <td>264</td>\n",
-       "      <td>264</td>\n",
-       "      <td>264</td>\n",
-       "      <td>264</td>\n",
-       "      <td>253</td>\n",
-       "      <td>264</td>\n",
-       "      <td>264</td>\n",
-       "      <td>74</td>\n",
-       "      <td>264</td>\n",
-       "      <td>264</td>\n",
-       "      <td>264</td>\n",
-       "      <td>264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2022-12-31</td>\n",
-       "      <td>129</td>\n",
-       "      <td>129</td>\n",
-       "      <td>129</td>\n",
-       "      <td>129</td>\n",
-       "      <td>120</td>\n",
-       "      <td>129</td>\n",
-       "      <td>129</td>\n",
-       "      <td>29</td>\n",
-       "      <td>129</td>\n",
-       "      <td>129</td>\n",
-       "      <td>127</td>\n",
-       "      <td>127</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Date  City  State  Country  Shape  Duration  Summary  Posted  Images  \\\n",
-       "0 2022-07-31   399    399      399    382       379      399     399     114   \n",
-       "1 2022-08-31   419    419      419    409       408      419     419     126   \n",
-       "2 2022-09-30   455    455      455    455       444      455     455     134   \n",
-       "3 2022-10-31   393    393      393    391       375      393     393     115   \n",
-       "4 2022-11-30   264    264      264    264       253      264     264      74   \n",
-       "5 2022-12-31   129    129      129    129       120      129     129      29   \n",
-       "\n",
-       "   ReportNum  Location  Latitude  Longitude  \n",
-       "0        399       399       397        397  \n",
-       "1        419       419       418        418  \n",
-       "2        455       455       455        455  \n",
-       "3        393       393       392        392  \n",
-       "4        264       264       264        264  \n",
-       "5        129       129       127        127  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(\"Count of UFO Sightings by Month:\")\n",
-    "ufo_months.count()\n",
-    "ufo_months"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "4d65a1fe",
-   "metadata": {},
-   "outputs": [
     {
      "data": {
       "text/html": [
@@ -771,96 +602,26 @@
        "5 2022-12-31              129"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(\"Count of UFO Sightings by Month:\")\n",
     "ufo_monthly = ufo_months.groupby('Date').sum()['State'].to_frame(name = 'Total Sightings').reset_index()\n",
     "ufo_monthly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "97bf423c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Date\n",
-       "2022-07-31    399\n",
-       "2022-08-31    419\n",
-       "2022-09-30    455\n",
-       "2022-10-31    393\n",
-       "2022-11-30    264\n",
-       "2022-12-31    129\n",
-       "Name: State, dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ufo_monthly.columns =['Month', 'Total Sightings']\n",
-    "ufo_monthly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "1beef7d5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Count of UFO Sightings by State:\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "reset_index() got an unexpected keyword argument 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15780\\3094482188.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Count of UFO Sightings by State:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmonths\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mufo_months\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Date'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Sum\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mascending\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmonths\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: reset_index() got an unexpected keyword argument 'name'"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Count of UFO Sightings by State:\")\n",
-    "months = ufo_months.groupby(['Date']).sum().reset_index(name=\"Sum\").sort_index(ascending=True)\n",
-    "print(months)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8fef97fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ufo_daily = ufo_data.groupby('Date').sum()['State']\n",
-    "ufo_daily"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f49364c",
+   "execution_count": 24,
+   "id": "a4f29ed7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# write to csv file\n",
-    "months.to_csv('sightings_months.csv')"
+    "ufo_monthly.to_csv('sightings_months.csv')"
    ]
   }
  ],
