update to table'

--- a/Data/Sightings_Monthly.ipynb
+++ b/Data/Sightings_Monthly.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "75bb3888",
+   "id": "9aee5f41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ca7f3072",
+   "id": "f88ac566",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +28,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a2c6775",
+   "id": "afd3a985",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Remove American Territories - US States \n",
+    "#Remove American Territories - US States Only\n",
     "ufo_data = ufo_data.drop(ufo_data[ufo_data['State'] == \"American Samoa\"].index)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "850d8384",
+   "id": "15e90f16",
    "metadata": {},
    "outputs": [
     {
@@ -309,6 +309,7 @@
     }
    ],
    "source": [
+    "#Switch to Datetime and Normalize\n",
     "ufo_data['Date'] = pd.to_datetime(ufo_data['Date']).dt.normalize()\n",
     "ufo_data"
    ]
@@ -316,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "77c3cc99",
+   "id": "710e1079",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8f632010",
+   "id": "806b8cdd",
    "metadata": {},
    "outputs": [
     {
@@ -514,6 +515,7 @@
     }
    ],
    "source": [
+    "#Resample Months\n",
     "ufo_months = ufo_data.set_index('Date').resample('M').count()\n",
     "ufo_months = ufo_months.reset_index()\n",
     "ufo_months"
@@ -522,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "19411c94",
+   "id": "74d32805",
    "metadata": {},
    "outputs": [
     {
@@ -608,15 +610,16 @@
     }
    ],
    "source": [
+    "#Summary of UFO Sightings by Month\n",
     "print(\"Count of UFO Sightings by Month:\")\n",
-    "ufo_monthly = ufo_months.groupby('Date').sum()['State'].to_frame(name = 'Total Sightings').reset_index()\n",
+    "ufo_monthly = ufo_months.groupby('Date').sum()['State'].to_frame(name = 'Sightings').reset_index()\n",
     "ufo_monthly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "a4f29ed7",
+   "execution_count": 34,
+   "id": "bf0780b9",
    "metadata": {},
    "outputs": [],
    "source": [
