Clean and label files

--- a/Data/Sightings_Monthly.ipynb
+++ b/Data/Sightings_Monthly.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9aee5f41",
+   "id": "a181297d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f88ac566",
+   "id": "5ba01670",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "afd3a985",
+   "id": "c1f673d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "15e90f16",
+   "id": "39ce7b37",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "710e1079",
+   "id": "7345b1fb",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "806b8cdd",
+   "id": "07416a2c",
    "metadata": {},
    "outputs": [
     {
@@ -523,8 +523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "74d32805",
+   "execution_count": 35,
+   "id": "d3dd76dd",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
-       "      <th>Total Sightings</th>\n",
+       "      <th>Sightings</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -595,16 +595,16 @@
        "</div>"
       ],
       "text/plain": [
-       "        Date  Total Sightings\n",
-       "0 2022-07-31              399\n",
-       "1 2022-08-31              419\n",
-       "2 2022-09-30              455\n",
-       "3 2022-10-31              393\n",
-       "4 2022-11-30              264\n",
-       "5 2022-12-31              129"
+       "        Date  Sightings\n",
+       "0 2022-07-31        399\n",
+       "1 2022-08-31        419\n",
+       "2 2022-09-30        455\n",
+       "3 2022-10-31        393\n",
+       "4 2022-11-30        264\n",
+       "5 2022-12-31        129"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,8 +618,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "bf0780b9",
+   "execution_count": 36,
+   "id": "2210761e",
    "metadata": {},
    "outputs": [],
    "source": [
