add table, update DB

--- a/Data/Sightings_Daily.ipynb
+++ b/Data/Sightings_Daily.ipynb
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "27681420",
+   "id": "11d1d173",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "49f7f4fa",
+   "id": "92a788db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "fe6da1c3",
+   "id": "82e6d739",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "9fb6ff37",
+   "id": "e5e41499",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "17cbb115",
+   "id": "5e6752b9",
    "metadata": {},
    "outputs": [
     {
@@ -729,13 +729,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "566a2c85",
+   "execution_count": 39,
+   "id": "ccd290d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# write to csv file\n",
-    "ufo_sightings.to_csv('sightings_time.csv')"
+    "ufo_daily.to_csv('sightings_time.csv')"
    ]
   }
  ],
