--- a/UFO_sightings_to_SQL.ipynb
+++ b/UFO_sightings_to_SQL.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/plain": [
-       "['sightings']"
+       "['states', 'months', 'hours', 'sighting']"
       ]
      },
      "execution_count": 3,
@@ -324,21 +324,13 @@
     "sighting = pd.read_sql(\"SELECT * FROM sighting\",connection)\n",
     "sighting"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8633e309",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -350,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
