update daily sightings by hour groupby

--- a/Data/Sightings_Daily.ipynb
+++ b/Data/Sightings_Daily.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "a181297d",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "5ba01670",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "c1f673d1",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "39ce7b37",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "      <td>Light</td>\n",
        "      <td>4 minutes</td>\n",
        "      <td>Bright circle light moving through sky.</td>\n",
-       "      <td>9/9/22</td>\n",
+       "      <td>9/9/2022</td>\n",
        "      <td>Yes</td>\n",
        "      <td>1</td>\n",
        "      <td>West Lafayette, OH</td>\n",
@@ -104,7 +104,7 @@
        "      <td>Other</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Strange red, blue and black craft in the sky a...</td>\n",
-       "      <td>9/9/22</td>\n",
+       "      <td>9/9/2022</td>\n",
        "      <td>Yes</td>\n",
        "      <td>2</td>\n",
        "      <td>Burr Ridge, IL</td>\n",
@@ -120,7 +120,7 @@
        "      <td>Circle</td>\n",
        "      <td>Less than a minute</td>\n",
        "      <td>Round bright white light go in a straight line...</td>\n",
-       "      <td>9/9/22</td>\n",
+       "      <td>9/9/2022</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3</td>\n",
        "      <td>Conway, SC</td>\n",
@@ -136,7 +136,7 @@
        "      <td>Light</td>\n",
        "      <td>2 minutes</td>\n",
        "      <td>Saw an orb that interacted with me.</td>\n",
-       "      <td>9/9/22</td>\n",
+       "      <td>9/9/2022</td>\n",
        "      <td>NaN</td>\n",
        "      <td>4</td>\n",
        "      <td>Keyser, WV</td>\n",
@@ -152,7 +152,7 @@
        "      <td>Unknown</td>\n",
        "      <td>less than a minute</td>\n",
        "      <td>A single soft red light that pulsed three time...</td>\n",
-       "      <td>9/9/22</td>\n",
+       "      <td>9/9/2022</td>\n",
        "      <td>NaN</td>\n",
        "      <td>5</td>\n",
        "      <td>gressham, OR</td>\n",
@@ -184,7 +184,7 @@
        "      <td>Sphere</td>\n",
        "      <td>5 minutes</td>\n",
        "      <td>Bright spherical object moving linear west to ...</td>\n",
-       "      <td>12/22/22</td>\n",
+       "      <td>12/22/2022</td>\n",
        "      <td>Yes</td>\n",
        "      <td>2126</td>\n",
        "      <td>Blakeslee, OH</td>\n",
@@ -200,7 +200,7 @@
        "      <td>Triangle</td>\n",
        "      <td>2 minutes</td>\n",
        "      <td>I grew up on a 40 acre parcel of land with thr...</td>\n",
-       "      <td>12/22/22</td>\n",
+       "      <td>12/22/2022</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2127</td>\n",
        "      <td>Snowflake, AZ</td>\n",
@@ -216,7 +216,7 @@
        "      <td>Oval</td>\n",
        "      <td>Ten minutes</td>\n",
        "      <td>It appeared out of nowhere &amp; slowly moved acro...</td>\n",
-       "      <td>12/22/22</td>\n",
+       "      <td>12/22/2022</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2129</td>\n",
        "      <td>El paso, TX</td>\n",
@@ -232,7 +232,7 @@
        "      <td>Light</td>\n",
        "      <td>2 to 3 minutes</td>\n",
        "      <td>Bright object was seen arriving and silently h...</td>\n",
-       "      <td>12/22/22</td>\n",
+       "      <td>12/22/2022</td>\n",
        "      <td>Yes</td>\n",
        "      <td>2130</td>\n",
        "      <td>CHARLESTOWN, IN</td>\n",
@@ -248,7 +248,7 @@
        "      <td>Changing</td>\n",
        "      <td>60 seconds</td>\n",
        "      <td>Looked like a drone but moved way too fast the...</td>\n",
-       "      <td>12/22/22</td>\n",
+       "      <td>12/22/2022</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2131</td>\n",
        "      <td>Mansfield, TX</td>\n",
@@ -287,23 +287,23 @@
        "2058      2 to 3 minutes  Bright object was seen arriving and silently h...   \n",
        "2059          60 seconds  Looked like a drone but moved way too fast the...   \n",
        "\n",
-       "        Posted Images  ReportNum            Location   Latitude   Longitude  \n",
-       "0       9/9/22    Yes          1  West Lafayette, OH  40.275349  -81.750960  \n",
-       "1       9/9/22    Yes          2      Burr Ridge, IL  41.748920  -87.918392  \n",
-       "2       9/9/22    NaN          3          Conway, SC  33.836003  -79.047814  \n",
-       "3       9/9/22    NaN          4          Keyser, WV  39.440928  -78.973916  \n",
-       "4       9/9/22    NaN          5        gressham, OR  45.504472 -122.435666  \n",
-       "...        ...    ...        ...                 ...        ...         ...  \n",
-       "2055  12/22/22    Yes       2126       Blakeslee, OH  41.524217  -84.730233  \n",
-       "2056  12/22/22    NaN       2127       Snowflake, AZ  34.513370 -110.078449  \n",
-       "2057  12/22/22    NaN       2129         El paso, TX  31.761878 -106.485022  \n",
-       "2058  12/22/22    Yes       2130     CHARLESTOWN, IN  38.453120  -85.670241  \n",
-       "2059  12/22/22    NaN       2131       Mansfield, TX  32.563192  -97.141677  \n",
+       "          Posted Images  ReportNum            Location   Latitude   Longitude  \n",
+       "0       9/9/2022    Yes          1  West Lafayette, OH  40.275349  -81.750960  \n",
+       "1       9/9/2022    Yes          2      Burr Ridge, IL  41.748920  -87.918392  \n",
+       "2       9/9/2022    NaN          3          Conway, SC  33.836003  -79.047814  \n",
+       "3       9/9/2022    NaN          4          Keyser, WV  39.440928  -78.973916  \n",
+       "4       9/9/2022    NaN          5        gressham, OR  45.504472 -122.435666  \n",
+       "...          ...    ...        ...                 ...        ...         ...  \n",
+       "2055  12/22/2022    Yes       2126       Blakeslee, OH  41.524217  -84.730233  \n",
+       "2056  12/22/2022    NaN       2127       Snowflake, AZ  34.513370 -110.078449  \n",
+       "2057  12/22/2022    NaN       2129         El paso, TX  31.761878 -106.485022  \n",
+       "2058  12/22/2022    Yes       2130     CHARLESTOWN, IN  38.453120  -85.670241  \n",
+       "2059  12/22/2022    NaN       2131       Mansfield, TX  32.563192  -97.141677  \n",
        "\n",
        "[2059 rows x 13 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "7345b1fb",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "11d1d173",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "Name: Date, Length: 2059, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "92a788db",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "82e6d739",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "[2059 rows x 2 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "e5e41499",
    "metadata": {},
    "outputs": [],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "5e6752b9",
    "metadata": {},
    "outputs": [
@@ -566,122 +566,122 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>84236</td>\n",
+       "      <td>89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>74363</td>\n",
+       "      <td>71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>69322</td>\n",
+       "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>66517</td>\n",
+       "      <td>62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>56597</td>\n",
+       "      <td>51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
-       "      <td>53799</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>6</td>\n",
-       "      <td>62897</td>\n",
+       "      <td>49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>7</td>\n",
-       "      <td>31232</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>8</td>\n",
-       "      <td>28218</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>9</td>\n",
-       "      <td>30384</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>10</td>\n",
-       "      <td>15576</td>\n",
+       "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>11</td>\n",
-       "      <td>24690</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>12</td>\n",
-       "      <td>47306</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>13</td>\n",
-       "      <td>46800</td>\n",
+       "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>14</td>\n",
-       "      <td>28512</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>15</td>\n",
-       "      <td>38494</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>16</td>\n",
-       "      <td>52167</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>17</td>\n",
-       "      <td>98122</td>\n",
+       "      <td>71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>18</td>\n",
-       "      <td>135905</td>\n",
+       "      <td>91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>19</td>\n",
-       "      <td>260728</td>\n",
+       "      <td>208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>20</td>\n",
-       "      <td>258241</td>\n",
+       "      <td>237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>21</td>\n",
-       "      <td>281452</td>\n",
+       "      <td>316</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>22</td>\n",
-       "      <td>228020</td>\n",
+       "      <td>264</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>23</td>\n",
-       "      <td>108444</td>\n",
+       "      <td>126</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -689,33 +689,33 @@
       ],
       "text/plain": [
        "    Hour  Sightings\n",
-       "0      0      84236\n",
-       "1      1      74363\n",
-       "2      2      69322\n",
-       "3      3      66517\n",
-       "4      4      56597\n",
-       "5      5      53799\n",
-       "6      6      62897\n",
-       "7      7      31232\n",
-       "8      8      28218\n",
-       "9      9      30384\n",
-       "10    10      15576\n",
-       "11    11      24690\n",
-       "12    12      47306\n",
-       "13    13      46800\n",
-       "14    14      28512\n",
-       "15    15      38494\n",
-       "16    16      52167\n",
-       "17    17      98122\n",
-       "18    18     135905\n",
-       "19    19     260728\n",
-       "20    20     258241\n",
-       "21    21     281452\n",
-       "22    22     228020\n",
-       "23    23     108444"
+       "0      0         89\n",
+       "1      1         71\n",
+       "2      2         66\n",
+       "3      3         62\n",
+       "4      4         51\n",
+       "5      5         50\n",
+       "6      6         49\n",
+       "7      7         26\n",
+       "8      8         22\n",
+       "9      9         32\n",
+       "10    10         21\n",
+       "11    11         29\n",
+       "12    12         39\n",
+       "13    13         40\n",
+       "14    14         29\n",
+       "15    15         31\n",
+       "16    16         39\n",
+       "17    17         71\n",
+       "18    18         91\n",
+       "19    19        208\n",
+       "20    20        237\n",
+       "21    21        316\n",
+       "22    22        264\n",
+       "23    23        126"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,13 +723,13 @@
    "source": [
     "#Group Total Sightings by Time of Day\n",
     "print(\"Count of UFO Sightings by Time of Day:\")\n",
-    "ufo_daily = ufo_sightings.groupby('Hour').sum()['ReportNum'].to_frame(name = 'Sightings').reset_index()\n",
+    "ufo_daily = ufo_sightings.groupby('Hour').count()['ReportNum'].to_frame(name = 'Sightings').reset_index()\n",
     "ufo_daily"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "ccd290d7",
    "metadata": {},
    "outputs": [],
