--- a/UFO_sightings_to_SQL.ipynb
+++ b/UFO_sightings_to_SQL.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/plain": [
-       "['states', 'months', 'hours', 'sighting']"
+       "['hours', 'sighting', 'states', 'months']"
       ]
      },
      "execution_count": 3,
